src/core/eelc/ec_parser.c
/*
---------------------------------------------------------------------------
	ec_parser.c - The EEL Parser/Compiler
---------------------------------------------------------------------------
 * Copyright 2002-2006, 2009-2012, 2014, 2019 David Olofson
 *
 * This software is provided 'as-is', without any express or implied warranty.
 * In no event will the authors be held liable for any damages arising from the
 * use of this software.
 *
 * Permission is granted to anyone to use this software for any purpose,
 * including commercial applications, and to alter it and redistribute it
 * freely, subject to the following restrictions:
 *
 * 1. The origin of this software must not be misrepresented; you must not
 *    claim that you wrote the original software. If you use this software
 *    in a product, an acknowledgment in the product documentation would be
 *    appreciated but is not required.
 * 2. Altered source versions must be plainly marked as such, and must not be
 *    misrepresented as being the original software.
 * 3. This notice may not be removed or altered from any source distribution.
 */

#include <stdlib.h>
#include <stdio.h>
#include "ec_parser.h"
#include "ec_symtab.h"
#include "ec_mlist.h"
#include "ec_context.h"
#include "e_state.h"
#include "e_class.h"
#include "e_function.h"
#include "e_module.h"
#include "e_string.h"
#include "e_object.h"
#include "e_table.h"

#if DBGH2(1)+0 == 1
static inline int eel__tk(const char *tkn, int tkc, int line)
{
	if(TK_WRONG == tkc)
		return tkc;
	printf("Parsed %s; line %d.\n", tkn, line);
	return tkc;
}
#  define TK(x)		eel__tk(#x, TK_##x, __LINE__)
#  define TK2(x, y)	eel__tk(x, y, __LINE__)
#else
#  define TK(x)		TK_##x
#  define TK2(x, y)	y
#endif

static int expression2(EEL_state *es, int limit, EEL_mlist *al,
		int wantresult);
static int expression(EEL_state *es, EEL_mlist *al, int wantresult);
static int body(EEL_state *es, int flags);
static void argdeflist(EEL_state *es, EEL_varkinds kind);
static int block(EEL_state *es);
static int statement(EEL_state *es, int flags);
static void add_export(EEL_object *mo, EEL_value *xv, const char *name);


/*----------------------------------------------------------
	Parser helper functions
----------------------------------------------------------*/

/* Verify that a class exists */
static void check_class(EEL_state *es, EEL_classes type)
{
	EEL_object *c;
	if(type >= es->nclasses)
		eel_cerror(es, "Undefined class! (Type ID %d)", type);
	if(type < 0)
		eel_cerror(es, "Illegal type ID! (Type ID %d)", type);
	c = es->classes[type];
	if(!c)
		eel_cerror(es, "Undefined class! (Type ID %d)", type);
}


/* Verify that a class can construct instances */
static void check_constructor(EEL_state *es, EEL_classes type)
{
	EEL_classdef *cd;
	check_class(es, type);
	cd = o2EEL_classdef(es->classes[type]);
	if(!cd->construct)
		eel_cerror(es, "Class '%s' does not have a constructor!",
				eel_typename(es->vm, type));
}


/* Make sure we have 'token' as the current token. */
static void expect(EEL_state *es, int token, const char *errmsg, ...)
{
	if(es->token != token)
	{
		if(errmsg)
		{
			va_list args;
			va_start(args, errmsg);
			eel_vmsg_src(es, EEL_EM_CERROR, errmsg, args);
			eel_cthrow(es);
		}
		else
		{
			if((es->token >= ' ') && (es->token < 127))
				eel_cerror(es, "Expected '%c' rather than '%c'.",
						token, es->token);
			else
				eel_cerror(es, "Expected '%c'.", token);
		}
	}
	eel_lex(es, 0);
}


/*
 * Generate code to prepare to leave specified context,
 * and any contexts below it.
 */
static void code_leave_context(EEL_state *es, EEL_context *ctx)
{
	EEL_coder *cdr = es->context->coder;
	if(!eel_keep_variables(ctx) &&
			(eel_initializations(ctx) >
			eel_initializations(ctx->previous)))
		eel_codeA(cdr, EEL_OCLEAN_A,
				eel_initializations(ctx->previous));
}


/*
 * Find nearest context with specified flag(s) set
 * Returns NULL if there is no such context below the top level.
 */
static EEL_context *find_context_flags(EEL_state *es, int flags)
{
	EEL_context *ctx = es->context;
	while(ctx->previous)	/* Root context is reserved - don't touch! */
	{
		if(ctx->flags & flags)
			return ctx;
		ctx = ctx->previous;
	}
	return NULL;
}


/*
 * Break out of the specified block (NULL = nearest breakable)
 */
static void code_break(EEL_state *es, EEL_context *ctx)
{
	int jump_out;
	EEL_codemark *cm;
	EEL_cestate xs;
	if(!ctx)
		ctx = find_context_flags(es, ECTX_BREAKABLE);
	if(!ctx)
		eel_cerror(es, "'break' outside breakable context!");
	
	xs = EEL_ENOT(eel_test_exit(es));
#if defined(EEL_DEAD_CODE_ELIMINATION) && !defined(EEL_DEAD_CODE_ILLEGAL)
	if(xs == EEL_ENO)
		return;
#endif
	/* Jump to end of context */
	DBGE(printf("Breaking out of context %p\n", ctx);)
	code_leave_context(es, ctx);
	jump_out = eel_codesAx(es->context->coder, EEL_OJUMP_sAx, 0);
	cm = (EEL_codemark *)malloc(sizeof(EEL_codemark));
	if(!cm)
		eel_ierror(es, "Could not create codemark for 'break' jump!");
	cm->pos = jump_out;
	cm->xstate = xs;
	ej_link(ctx, cm);
	eel_e_break(es, ctx);
}


/* Jump to the start of the specified repeatable context. */
static void code_repeat(EEL_state *es, EEL_context *ctx)
{
	int jmp;
	DBGE(printf("Repeating context %p\n", ctx);)
	code_leave_context(es, ctx);
	jmp = eel_codesAx(es->context->coder, EEL_OJUMP_sAx, 0);
	eel_code_setjump(es->context->coder, jmp, ctx->startpos);
	eel_e_break(es, ctx);
}

/* Skip the rest of the 'for' body and go for the next iteration */
static void code_next(EEL_state *es, EEL_context *ctx)
{
	int jump_out;
	EEL_codemark *cm;
	EEL_cestate xs = EEL_ENOT(eel_test_exit(es));
#if defined(EEL_DEAD_CODE_ELIMINATION) && !defined(EEL_DEAD_CODE_ILLEGAL)
	if(xs == EEL_ENO)
		return;
#endif
	DBGE(printf("Continuing 'for' loop %p\n", ctx);)
	code_leave_context(es, ctx);
/*
FIXME: We could make room for LOOP a instruction and an end jump instead,
FIXME: to avoid an extra jump when continuing.
*/
	jump_out = eel_codesAx(es->context->coder, EEL_OJUMP_sAx, 0);
	cm = (EEL_codemark *)malloc(sizeof(EEL_codemark));
	if(!cm)
		eel_ierror(es, "Could not create codemark for 'continue' jump!");
	cm->pos = jump_out;
	cm->xstate = xs;
	cj_link(ctx, cm);
	eel_e_break(es, ctx);
}


/* Fix any jumps ('for' continues) to the loop test */
static void code_fixup_continuations(EEL_state *es)
{
	EEL_context *c = es->context;
	EEL_coder *cdr = c->coder;
	int pos = eel_code_target(cdr);
	DBGD(printf("  Now fixing up continue jumps...\n");)
	while(c->contjumps)
	{
		EEL_codemark *cm = c->contjumps;
		DBGD(if(cm->pos >= 0)
			printf("    %d: JUMP PC + %d\n", cm->pos, pos);
		else
			printf("(DEAD: %d: JUMP PC + %d)\n", -cm->pos, pos);)
		eel_code_setjump(cdr, cm->pos, pos);
		eel_e_target(es, cm->xstate);
		cj_unlink(c, cm);
		free(cm);
	}
	DBGD(printf("  Done!\n");)
}


/* Fix any jumps (breaks) to the end of the context */
static void code_fixup_breaks(EEL_state *es)
{
	EEL_context *c = es->context;
	EEL_coder *cdr = c->coder;
	int pos = eel_code_target(cdr);
	DBGD(printf("  Fixing up end jumps...\n");)
	while(c->endjumps)
	{
		EEL_codemark *cm = c->endjumps;
		DBGD(if(cm->pos >= 0)
			printf("    %d: JUMP PC + %d\n", cm->pos, pos);
		else
			printf("(DEAD: %d: JUMP PC + %d)\n", -cm->pos, pos);)
		eel_code_setjump(cdr, cm->pos, pos);
		eel_e_target(es, cm->xstate);
		ej_unlink(c, cm);
		free(cm);
	}
	DBGD(printf("  Done!\n");)
}


/* Move any end jumps (breaks) to the previous context */
static void code_move_breaks_up(EEL_state *es)
{
	EEL_context *c = es->context;
	DBGD(EEL_coder *cdr = c->coder;)
	DBGD(printf("  Moving up end jumps...\n");)
	while(c->endjumps)
	{
		EEL_codemark *cm = c->endjumps;
		DBGD(printf("    %d: JUMP PC + %d\n", cm->pos, cdr->pos);)
		ej_unlink(c, cm);
		ej_link(c->previous, cm);
	}
	DBGD(printf("  Done!\n");)
}


/* Return from procedure */
static void procreturn(EEL_state *es)
{
	EEL_function *f = o2EEL_function(es->context->coder->f);
	int flags = f->common.flags;
	DBGE(printf("Returning from context %p\n", es->context);)
	if((flags & EEL_FF_RESULTS) && (eel_test_result(es) != EEL_EYES))
			eel_cerror(es, "Control reaches end of function that"
					" should return a value!");
	eel_code0(es->context->coder, EEL_ORETURN_0);
	eel_e_return(es);
}


/*
 * Add object 'o' to the 'objects' array of the current module.
 * The module will gain ownership of the object, and the module
 * will disown the object when the module is destroyed.
 */
static void add_object_to_module(EEL_state *es, EEL_object *o)
{
	EEL_module *m = o2EEL_module(es->context->module);
	EEL_object_p_da *a = &m->objects;
	if(eel_objs_setsize(es->vm, a, a->size + 1) < 0)
		eel_ierror(es, "Could not add object to module 'objects' list!");
	a->array[a->size] = o;
	eel_o_own(o);
	++a->size;
}


static void forward_exports(EEL_object *from, EEL_object *to, int symcheck)
{
	EEL_vm *vm = to->vm;
	EEL_state *es = VMP->state;
	int i, len;
	EEL_module *mm;
	EEL_object *im = eel_ps_new(vm, "__init_module");
	EEL_object *mn = eel_ps_new(vm, "__modname");
	EEL_object *fn = eel_ps_new(vm, "__filename");
	if(!im || !mn || !fn)
		eel_serror(es, "Could not create \"__init_module\" string!");
	mm = o2EEL_module(from);
	len = eel_length(mm->exports);
	for(i = 0; i < len; ++i)
	{
		EEL_tableitem *ti = eel_table_get_item(mm->exports, i);
		EEL_finder ef;
		EEL_symbol *s;
		EEL_value *k = eel_table_get_key(ti);
		EEL_value *v = eel_table_get_value(ti);
		DBG11(printf("Forwarding export '%s' (%s)...\n",
				eel_v2s(k), eel_v_stringrep(vm, v));)

		/* Key must be string! */
		if((EEL_classes)EEL_TYPE(k) != EEL_CSTRING)
			eel_ierror(es, "forward_exports() got a table "
					"item with a non-string name!");

		/* Don't forward any special module "private" stuff! */
		if(k->objref.v == im)
			continue;
		if(k->objref.v == mn)
			continue;
		if(k->objref.v == fn)
			continue;

		if(symcheck)
		{
			/* Name must not exist in current scope! */
			eel_finder_init(es, &ef, es->context->symtab,
					ESTF_NAME | ESTF_TYPES);
			ef.name = k->objref.v;
			ef.types = EEL_SMFUNCTION;
			s = eel_finder_go(&ef);
			if(s)
			{
				eel_o_disown_nz(im);
				eel_o_disown_nz(mn);
				eel_o_disown_nz(fn);
				eel_cerror(es, "Export '%s' from module "
						"\"%s\" (\"%s\") "
						" causes a conflict!",
						eel_o2s(s->name),
						eel_module_modname(from),
						eel_module_filename(from));
			}
		}

		add_export(to, v, eel_o2s(k->objref.v));
	}
	eel_o_disown_nz(im);
	eel_o_disown_nz(mn);
	eel_o_disown_nz(fn);
}


/*----------------------------------------------------------
	importstat rule
----------------------------------------------------------*/

/* Item handler for importlist */
static void import_handler(EEL_state *es, int forward, int shared)
{
	EEL_object *m;
	char *modname = strdup(es->lval.v.s.buf);
	unsigned flags = es->context->sflags;
	if(shared)
		flags |= EEL_SF_ALLOWSHARED | EEL_SF_SHARED;
	if(!(m = eel_load(es->vm, modname, flags)))
	{
		char mn[256];
		snprintf(mn, sizeof(mn) - 1, "%s", modname);
		mn[sizeof(mn) - 1] = 0;
		free(modname);
		eel_cerror(es, "Couldn't import module \"%s\"!", mn);
	}
	if(shared && (o2EEL_module(m)->flags & EEL_M_SHARED))
	{
		if(strcmp(modname, eel_module_modname(m)) != 0)
			eel_cwarning(es, "Module imported as '%s' actually "
					"calls itself '%s'!\n"
					"Perhaps the module is misnamed, or "
					"installed in the wrong location?",
					modname, eel_module_modname(m));
	}
	eel_lex(es, 0);
	if(TK_KW_AS == es->token)
	{
		EEL_symbol *ns;
		eel_lex(es, 0);
		if(es->token != TK_NAME)
			eel_cerror(es, "Expected namespace name!");
		ns = eel_s_find(es, es->context->symtab, es->lval.v.s.buf,
				EEL_SNAMESPACE);
		if(ns)
			eel_cerror(es, "There already is a namespace '%s' "
					"in this context!", es->lval.v.s.buf);
		ns = eel_s_add(es, es->context->symtab, es->lval.v.s.buf,
				EEL_SNAMESPACE);
		eel_s_get_exports(ns, m);
		eel_lex(es, 0);
		if(forward)
			forward_exports(m, es->context->module, 1);
	}
	else
	{
		eel_s_get_exports(es->context->symtab, m);
		if(forward)
			forward_exports(m, es->context->module, 0);
	}
	eel_o_disown_nz(m);	/* Now held via the exports! */
	free(modname);
}

/*
	importlist:
		STRING [KW_AS NAME]
		| DOTTED_NAME [KW_AS NAME]
		| STRING ',' importlist
		| DOTTED_NAME ',' importlist
		;
*/
static void importlist(EEL_state *es, int forward)
{
	while(1)
	{
		eel_lex(es, ELF_DOTTED_NAME);
		switch(es->token)
		{
		  case TK_STRING:
			import_handler(es, forward, 0);
			break;
		  case TK_NAME:
			import_handler(es, forward, 1);
			break;
		  default:
			eel_cerror(es, "Expected module name or path!");
		}
		if(es->token != ',')
			return;
	}
}

/*
	importstat:
		[KM_EXPORT] KW_IMPORT importlist
		;
*/
static int importstat(EEL_state *es)
{
	int fwimports = 0;
	switch(es->token)
	{
	  case TK_KW_EXPORT:
		eel_lex(es, 0);
		if(es->token != TK_KW_IMPORT)
		{
			/* Nope! Someone wanting to export something else... */
			eel_unlex(es);
			return TK(WRONG);
		}
		fwimports = 1;
		/* Fall through! */
	  case TK_KW_IMPORT:
		importlist(es, fwimports);
		expect(es, ';', "Missing ';' after 'import' statement!");
		DBGH(printf("## statement: KW_IMPORT importlist ';'\n");)
		return TK(STATEMENT);
	  default:
		return TK(WRONG);
	}
}


/*
 * Turn the current context into a function.
 * A suitable context must be in place!
 */
static int declare_func(EEL_state *es, const char *name, EEL_mlist *al,
		EEL_symbol *decl, int flags, const char *symname)
{
	EEL_xno x;
	int pflags;
	EEL_coder *nc;
	EEL_object *fo;
	EEL_function *f;
	EEL_symbol *st = es->context->symtab;

	if(es->context->coder && es->context->coder->f)
		pflags = o2EEL_function(es->context->coder->f)->common.flags;
	else
		pflags = 0;

	if(decl)
	{
		/* Fill in the predeclared function! */
		fo = decl->v.object;
		f = o2EEL_function(fo);
		eel_o_own(fo);
	}
	else
	{
		EEL_value fov;
		x = eel_o_construct(es->vm, EEL_CFUNCTION, NULL, 0, &fov);
		if(x)
			return -1;
		if((EEL_classes)EEL_TYPE(&fov) != EEL_CFUNCTION)
			eel_ierror(es, "FUNCTION constructor returned %s "
					"instance!", eel_typename(es->vm,
					fov.type));
		fo = fov.objref.v;
		f = o2EEL_function(fo);
		f->common.module = es->context->module;
		add_object_to_module(es, fo);
	}

	f->common.flags = flags;

	/*
	 * Apply qualifiers
	 */
	if(es->qualifiers & EEL_QEXPORT)
		f->common.flags |= EEL_FF_EXPORT;

	/*
	 * If this is an xblock, mark as XBLOCK and inherit
	 * the parent's RESULTS flag.
	 */
	if(flags & EEL_FF_XBLOCK)
		f->common.flags |= (pflags & EEL_FF_RESULTS);

	/* Move code generation to a local coder for the function */
	nc = eel_coder_open(es, fo);
	if(!nc)
	{
		eel_o_disown_nz(fo);
		return -1;
	}
	es->context->coder = nc;
	es->context->flags |= ECTX_OWNS_CODER;
	es->context->startpos = 0;

	/* Turn the current namespace into the new function */
	st->v.object = es->context->coder->f;
	if(!decl)
	{
		if(!symname)
			symname = name;
		eel_s_rename(es, st, symname);
		if(f->common.name)
			eel_o_disown_nz(f->common.name);
		f->common.name = eel_ps_new(es->vm, name);
		if(!f->common.name)
			eel_serror(es, "Could not rename function!");
	}

	/* Add the function to the arglist */
	if(al)
		eel_m_object(al, fo);

	DBGF(printf("-- declared function '%s' in '%s'; flags = %d\n", name,
			st->parent->name ? eel_o2s(st->parent->name) :
			"<unnamed>", f->common.flags);)
	return 0;
}


/*
 * Scan the local symbol table for results and arguments,
 * and use the information to construct the function call
 * prototype info.
 */
static void declare_func_args(EEL_state *es, int has_result)
{
	int tupdefs = 0;
	EEL_symbol *s;
	EEL_finder ef;
	EEL_function *f = o2EEL_function(es->context->coder->f);
	eel_finder_init(es, &ef, es->context->symtab, ESTF_TYPES);
	ef.types = EEL_SMVARIABLE;
	f->common.results = has_result ? 1 : 0;
	f->common.reqargs = 0;
	f->common.optargs = 0;
	f->common.tupargs = 0;
	while((s = eel_finder_go(&ef)))
		switch((EEL_varkinds)s->v.var.kind)
		{
		  case EVK_STACK:
		  case EVK_STATIC:
			break;
		  case EVK_ARGUMENT:
			s->v.var.location = f->common.reqargs;
			++f->common.reqargs;
			break;
		  case EVK_OPTARG:
		  	/*
		  	 * NOTE: This requires that all required arguments have
		  	 * been handled before we get to the optional ones!
		  	 */
			s->v.var.location = f->common.reqargs +
					f->common.optargs;
			++f->common.optargs;
			if(s->v.var.defindex >= 0)
				f->common.flags |= EEL_FF_OPTDEFAULTS;
			break;
		  case EVK_TUPARG:
			s->v.var.location = f->common.tupargs;
			++f->common.tupargs;
			if(s->v.var.defindex >= 0)
			{
				f->common.flags |= EEL_FF_TUPDEFAULTS;
				++tupdefs;
			}
			break;
		}
	if(f->common.results)
		f->common.flags |= EEL_FF_RESULTS;
	if(f->common.reqargs || f->common.optargs || f->common.tupargs)
		f->common.flags |= EEL_FF_ARGS;
	if(tupdefs && (f->common.tupargs != tupdefs))
		eel_cerror(es, "Incomplete set of defaults for tuple!");
	if(f->common.flags & (EEL_FF_OPTDEFAULTS | EEL_FF_TUPDEFAULTS))
	{
		int *ad = f->e.argdefaults = malloc((f->common.optargs +
				f->common.tupargs) * sizeof(int));
		if(!ad)
			eel_serror(es, "Could not allocate argument defaults "
					"array!");
		eel_finder_init(es, &ef, es->context->symtab, ESTF_TYPES);
		while((s = eel_finder_go(&ef)))
			switch((EEL_varkinds)s->v.var.kind)
			{
			  case EVK_STACK:
			  case EVK_STATIC:
			  case EVK_ARGUMENT:
				break;
			  case EVK_OPTARG:
				ad[s->v.var.location - f->common.reqargs] =
						s->v.var.defindex;
				break;
			  case EVK_TUPARG:
				ad[f->common.optargs + s->v.var.location] =
						s->v.var.defindex;
				break;
			}
	}
    DBGF({
	printf("-- function '%s' has ", eel_o2s(es->context->symtab->name));
	printf("%d results, ", f->common.results);
	printf("%d required arguments, ", f->common.reqargs);
	printf("%d optional arguments and ", f->common.optargs);
	printf("%d tuple arguments.\n", f->common.tupargs);
    })
}


/*
FIXME: This implementation might generate register fragmentation!
FIXME: This would happen if there are temporary registers allocated
FIXME: when declaring stack variables. The regs will be recovered
FIXME: sooner or later, so it's no showstopper even if it happens.

TODO: We should treat static variables like stack variables (ie
TODO: track initializations) when compiling into __module_init,
TODO: and make sure that there are no uninitialized statics when
TODO: compiler closes the __module_init function.
TODO: Currently, static variables are initialized to nil as they're
TODO: declared... They shouldn't even be existing physically at
TODO: compile time!
*/
static EEL_symbol *declare_var(EEL_state *es, const char *name, EEL_varkinds kind)
{
	EEL_coder *cdr = es->context->coder;
	EEL_symbol *s = eel_s_add(es, es->context->symtab, name,
			EEL_SVARIABLE);
	if(!s)
		eel_serror(es, "Could not create symbol for new variable!");
	s->v.var.kind = kind;
	switch(kind)
	{
	  case EVK_STACK:
		s->v.var.location = eel_r_alloc(cdr, 1, EEL_RUVARIABLE);
		DBGF(printf("-- declared stack variable '%s' (storage: R[%d])",
				 name, s->v.var.location);)
		break;
	  case EVK_STATIC:
		s->v.var.location = eel_coder_add_variable(cdr, NULL);
		DBGF(printf("-- declared static variable '%s' (storage: SV[%d])",
				 name, s->v.var.location);)
		break;
	  case EVK_ARGUMENT:
		DBGF(printf("-- declared required argument '%s'", name);)
		break;
	  case EVK_OPTARG:
		DBGF(printf("-- declared optional argument '%s'", name);)
		break;
	  case EVK_TUPARG:
		DBGF(printf("-- declared tuple argument '%s'", name);)
		break;
	}
	DBGF(printf(" in '%s'\n", eel_o2s(es->context->symtab->name));)
	return s;
}


/*
 * Explicitly declare variable 'var' as an upvalue for access without
 * warnings in the current function.
 */
static EEL_symbol *declare_upvalue(EEL_state *es, EEL_symbol *var)
{
	EEL_symbol *s = eel_s_add(es, es->context->symtab,
			o2EEL_string(var->name)->buffer, EEL_SUPVALUE);
	if(!s)
		eel_serror(es, "Could not create symbol for upvalue!");

	/* Make the new symbol a local shadow of the "real" symbol */
	s->v.var.kind = var->v.var.kind;
	s->v.var.location = var->v.var.location;
	s->uvlevel = var->uvlevel;
	return s;
}


/*
 * Get variable 's', adding it to 'al'.
 *
 * If 'al' allows it, the register index of the variable itself
 * is added. If not, a temporary register is allocated via 'al',
 * and code is generated to copy the value.
 */
static void do_getvar(EEL_state *es, EEL_symbol *s, EEL_mlist *al)
{
	int level = es->context->symtab->uvlevel - s->uvlevel;
	int uv = level != 0;
	DBGF(printf("Getting '%s' in '%s'; level = %d; ",
			eel_o2s(s->name),
			eel_o2s(es->context->symtab->name), level));
	switch((EEL_varkinds)s->v.var.kind)
	{
	  case EVK_STACK:
		DBGF(printf("STACK\n"));
		eel_m_variable(al, s, level);
		break;
	  case EVK_STATIC:
		DBGF(printf("STATIC\n"));
		eel_m_statvar(al, s);
		uv = 0;	/* Statics are never upvalues! */
		break;
	  case EVK_ARGUMENT:
		DBGF(printf("ARGUMENT\n"));
		eel_m_argument(al, s, level);
		break;
	  case EVK_OPTARG:
		DBGF(printf("OPTARG\n"));
		eel_m_optarg(al, s, level);
		break;
	  case EVK_TUPARG:
		DBGF(printf("TUPARG\n"));
		eel_m_tuparg(al, s, level);
		break;
	  default:
		eel_cerror(es, "Tried to get variable '%s', which is not"
				" of any legal variable kind!",
				eel_o2s(s->name));
	}
	if(uv)
	{
		EEL_function *f = o2EEL_function(es->context->coder->f);
		f->common.flags |= EEL_FF_UPVALUES;
		if((EEL_SVARIABLE == s->type) &&
				!(f->common.flags & EEL_FF_XBLOCK))
			eel_cerror(es, "Implicit upvalue '%s'.",
					eel_o2s(s->name));
	}
}


/*
 * Try to index 'obj' by 'index', adding the result(s) to 'dest'.
 */
static void do_index(EEL_state *es, EEL_mlist *obj, EEL_mlist *ind,
		EEL_mlist *dest)
{
	int i, count, oi, ii;
	if(!obj->length)
		eel_cerror(es, "Trying to index nothing!");
	if(!ind->length)
		eel_cerror(es, "Trying to index object with nothing!");
	if(obj->length == 1)
	{
		count = ind->length;
		oi = 0;
		ii = 1;
	}
	else if(ind->length == 1)
	{
		count = obj->length;
		oi = 1;
		ii = 0;
	}
	else
	{
		if(obj->length != ind->length)
			eel_cerror(es, "Number of objects does not match "
					"number of indices!");
		count = obj->length;
		oi = ii = 1;
	}
	for(i = 0; i < count; ++i)
		eel_m_index(dest, eel_ml_get(obj, i * oi),
				eel_ml_get(ind, i * ii));
}

/*
 * Create a string object from a C string.
 * The object is returned as a reference through 'v'.
 */
static void v_set_string(EEL_state *es, const char *s, EEL_value *v)
{
	v->type = EEL_TOBJREF;
	v->objref.v = eel_ps_new(es->vm, s);
	if(!v->objref.v)
		eel_serror(es, "Could not create string object!");
}

/*
 * Create a string object from a memory block + length.
 * The object is returned as a reference through 'v'.
 */
static void v_set_string_n(EEL_state *es, const char *s, int len, EEL_value *v)
{
	v->type = EEL_TOBJREF;
	v->objref.v = eel_ps_nnew(es->vm, s, len);
	if(!v->objref.v)
		eel_serror(es, "Could not create string object "
				"for string literal!");
}


/*
 * Parse zero or more qualifier keywords, returning
 * a bit mask with 1's for the qualifiers parsed.
 */
/*
	qualifier:
		  KW_LOCAL
		| KW_STATIC
		| KW_UPVALUE
		| KW_EXPORT
		| KW_SHADOW
		;

	qualifiers:
		  qualifier
		| qualifier qualifiers
		;
*/
static int parse_qualifiers(EEL_state *es)
{
	EEL_qualifiers result = 0;
	while(1)
	{
		EEL_qualifiers q;
		switch(es->token)
		{
		  case TK_KW_LOCAL:	q = EEL_QLOCAL; break;
		  case TK_KW_STATIC:	q = EEL_QSTATIC; break;
		  case TK_KW_UPVALUE:	q = EEL_QUPVALUE; break;
		  case TK_KW_EXPORT:	q = EEL_QEXPORT; break;
		  case TK_KW_SHADOW:	q = EEL_QSHADOW; break;
		  default:
			return result;
		}
		if(q & result)
			eel_cerror(es, "Qualifier '%s' specified"
					" more than once!",
					eel_o2s(es->lval.v.symbol->name));
		result |= q;
		eel_lex(es, 0);
	}
}

/*
 * Check that only the listed qualifiers are present, and throw an error as
 * defined by 'fmt' if others are found. If 'fmt' contains a %s format code,
 * it is replaced with the qualifier keyword in any error message.
 */
static void q_allow_only(EEL_state *es, EEL_qualifiers mask, const char *fmt)
{
	mask = es->qualifiers & ~mask;
	if(mask & EEL_QLOCAL)
		eel_cerror(es, fmt, "local");
	if(mask & EEL_QSTATIC)
		eel_cerror(es, fmt, "static");
	if(mask & EEL_QUPVALUE)
		eel_cerror(es, fmt, "upvalue");
	if(mask & EEL_QEXPORT)
		eel_cerror(es, fmt, "export");
	if(mask & EEL_QSHADOW)
		eel_cerror(es, fmt, "shadow");
}


/* Complain if any qualifiers at all are present. */
#ifdef DEBUG
static void __no_qualifiers(EEL_state *es, int line)
# define no_qualifiers(es) __no_qualifiers(es, __LINE__)
#else
static void no_qualifiers(EEL_state *es)
#endif
{
	if(es->qualifiers)
#ifdef DEBUG
		eel_cerror(es, "No qualifiers allowed in this context! (%d)", line);
#else
		eel_cerror(es, "No qualifiers allowed in this context!");
#endif
}



/*
 * "Eat" the specified qualifiers, and complain if any other qualifiers are
 * present.
 */
static void qualifiers_handled(EEL_state *es, EEL_qualifiers mask)
{
	es->qualifiers &= ~mask;
	q_allow_only(es, -1, "Qualifier '%s' not allowed in this context!");
}

